Whitespace & line break support. Switched to textarea to avoid style copying. Corrections now correctly reposition (500ms) after a window resize.

--- a/styles/common.css
+++ b/styles/common.css
@@ -24,6 +24,8 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
+
   /* no scrollbar hack: overflow-x: hidden; */
 }
 
@@ -33,8 +35,6 @@ body {
 
 #content-container {
   display: block;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
 
   width: 100%;
   height: 100vh;
@@ -58,26 +58,39 @@ body {
 
 #transcript-outer {
   position: absolute;
-  left: 7.5%;
+  left: 0;
   top: 0;
   /* no scrollbar hack: width: 60%; */
-  width: 85%;
-  font-size: 20px;
+  width: 100%;
   line-height: 60px;
   margin: 0;
   padding: 0;
 }
 #transcript-outer h1 {
   color: var(--neutral-color);
-  width: 100%;
+  margin-left: 7.5%;
+  padding-top: 10px;
+  width: 85%;
   border-bottom: 2px solid var(--neutral-color);
 }
-#transcript-container {
+#transcript-container, #script-full {
   position: absolute;
-  top: 100px;
-  width: 100%;
+  left: 7.5%;
+  width: 85%;
   font-size: 20px;
-  line-height: 60px;
+  line-height: 50px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16pt;
+}
+#script-full {
+  left: 0;
+  resize: none;
+  width: 100%;
+  outline: 0;
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .dark {
