--- a/styles/dictation.css
+++ b/styles/dictation.css
@@ -7,6 +7,8 @@
   border-radius: 10px;
   border-top-left-radius: 0;
   padding: 2px 5px;
+  font-size: 16px;
+  line-height: normal;
 }
 .correction:hover {
   border-color: transparent;
