--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -73,6 +73,7 @@ button.bad:hover, button.bad:focus {
   height: var(--graph-heading-height);
   transition-duration: 1s;
   box-shadow: inset 0 -200px 200px -200px #3333;
+  overflow: hidden;
 }
 .shaded-display.bad {
   background: var(--bad-color);
